:sparkles: mise en place progressive web app